[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/snail_sheet.png" type="Texture" id=1]
[ext_resource path="res://src/Enemies/Snail.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.99998
height = 12.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14, 8.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13, 8 )

[node name="Snail" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 8 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -1, 7.5 )
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -1, 8 )
shape = SubResource( 3 )

[node name="ProjectileSpawnPivot" type="Position2D" parent="."]
position = Vector2( -4, 2 )

[node name="ProjectileSpawnPoint1" type="Position2D" parent="."]
position = Vector2( -10, -1 )

[node name="ProjectileSpawnPoint2" type="Position2D" parent="."]
position = Vector2( -4, -4 )

[node name="ProjectileSpawnPoint3" type="Position2D" parent="."]
position = Vector2( 1, -1 )

[node name="CliffDetector" type="RayCast2D" parent="."]
position = Vector2( 13, 16 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2

[node name="WallDetector" type="RayCast2D" parent="."]
position = Vector2( 13, 15 )
enabled = true
cast_to = Vector2( 2, 0 )
collision_mask = 2

[node name="ProjectilesTween" type="Tween" parent="."]

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
